# dtdp

./: README.md
AlyEtAl/: DTDPAlgorithms.py  vns.high.code.py  vns.high.results.txt  vns.low.code.py  vns.low.results.txt  vns.medium.code.py  vns.medium.results.txt
code/: CMakeLists.txt
code/cmake/: Findcplex.cmake
instances/group1/: planar500_G0.graphml  planar500_G1.graphml  planar500_G2.graphml  planar500_G3.graphml  planar500_G4.graphml  planar500_G5.graphml  planar500_G6.graphml  planar500_G7.graphml  planar500_G8.graphml  planar500_G9.graphml  planar600_G0.graphml  planar600_G1.graphml  planar600_G2.graphml  planar600_G3.graphml  planar600_G4.graphml  planar600_G5.graphml  planar600_G6.graphml  planar600_G7.graphml  planar600_G8.graphml  planar600_G9.graphml  planar700_G0.graphml  planar700_G1.graphml  planar700_G2.graphml  planar700_G3.graphml  planar700_G4.graphml  planar700_G5.graphml  planar700_G6.graphml  planar700_G7.graphml  planar700_G8.graphml  planar700_G9.graphml
instances/group3/: d-h_w-h_c-h-Center486_G0.graphml  d-h_w-h_c-h-Center486_G1.graphml  d-h_w-h_c-h-Center486_G2.graphml  d-h_w-h_c-h-Center486_G3.graphml  d-h_w-h_c-h-Center486_G4.graphml  d-h_w-h_c-h-Center486_G5.graphml  d-h_w-h_c-h-Center486_G6.graphml  d-h_w-h_c-h-Center486_G7.graphml  d-h_w-h_c-h-Center486_G8.graphml  d-h_w-h_c-h-Center486_G9.graphml  d-h_w-h_c-h-Center600_G0.graphml  d-h_w-h_c-h-Center600_G1.graphml  d-h_w-h_c-h-Center600_G2.graphml  d-h_w-h_c-h-Center600_G3.graphml  d-h_w-h_c-h-Center600_G4.graphml  d-h_w-h_c-h-Center600_G5.graphml  d-h_w-h_c-h-Center600_G6.graphml  d-h_w-h_c-h-Center600_G7.graphml  d-h_w-h_c-h-Center600_G8.graphml  d-h_w-h_c-h-Center600_G9.graphml  d-h_w-h_c-h-Center726_G0.graphml  d-h_w-h_c-h-Center726_G1.graphml  d-h_w-h_c-h-Center726_G2.graphml  d-h_w-h_c-h-Center726_G3.graphml  (+2406 more)
irace/: out.300s.txt  out.600s.txt  out.60s.txt
resultsLNS/: lns.results.txt
scripts/: doTables.py  transform.py
(+10 files in other folders)
